fix: golang lsp running duplicated

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -33,14 +33,6 @@
   "rounded": true,
   "border": true
   },
-  "Lua.telemetry.enable": false,
+  "Lua.telemetry.enable": false
 
-  "languageserver": {
-    "golang": {
-      "command": "gopls",
-      "rootPatterns": ["go.mod"],
-      "filetypes": ["go"]
-    }
-  }
 }
-
